force-app/main/default/objects/malive__IoTDevice__c/malive__IoTDevice__c.object-meta.xml
<CustomObject>
    <label>MA Live IoT Device</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Live IoT Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>