force-app/main/default/objects/malive__IoTDevice__c/fields/malive__DeviceType__c.field-meta.xml
<CustomField>
    <fullName>malive__DeviceType__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LMU4230</fullName>
            </value>
            <value>
                <fullName>LMU5531M</fullName>
            </value>
            <value>
                <fullName>LMU2620</fullName>
            </value>
            <value>
                <fullName>LMU3030</fullName>
            </value>
            <value>
                <fullName>TTU2830</fullName>
            </value>
            <value>
                <fullName>TTU720</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MA Live Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>