force-app/main/default/objects/malive__IoTDevice__c/fields/malive__LastPositionAddress__c.field-meta.xml
<CustomField>
    <fullName>malive__LastPositionAddress__c</fullName>
    <description>The physical address the device last reported from</description>
    <inlineHelpText>The physical address the device last reported from</inlineHelpText>
    <label>Last Position Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>