force-app/main/default/objects/malive__IoTDevice__c/fields/malive__LastPositionDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__LastPositionDateTime__c</fullName>
    <inlineHelpText>Timestamp of last received Geo-location message.</inlineHelpText>
    <label>Last Position Date/Time</label>
    <type>DateTime</type>
</CustomField>