force-app/main/default/objects/malive__IoTDevice__c/fields/malive__LastPositionUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__LastPositionUpdateDateTime__c</fullName>
    <inlineHelpText>Timestamp of this last position record updated by batch.</inlineHelpText>
    <label>Batch Date/Time of Last Position</label>
    <type>DateTime</type>
</CustomField>