force-app/main/default/objects/malive__IoTDevice__c/fields/malive__LastReportedTimeZone__c.field-meta.xml
<CustomField>
    <fullName>malive__LastReportedTimeZone__c</fullName>
    <label>Last Reported Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>