force-app/main/default/objects/malive__IoTDevice__c/fields/malive__LatestDailySummary__c.field-meta.xml
<CustomField>
    <fullName>malive__LatestDailySummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Daily Summary</label>
    <referenceTo>malive__IoTDeviceDailySummary__c</referenceTo>
    <relationshipName>MA_Live_IoT_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>