force-app/main/default/objects/malive__IoTDevice__c/fields/malive__Location__c.field-meta.xml
<CustomField>
    <fullName>malive__Location__c</fullName>
    <inlineHelpText>Geo-location of last position received.</inlineHelpText>
    <label>Last Position</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>