force-app/main/default/objects/malive__IoTDevice__c/fields/malive__OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>malive__OdometerMiles__c</fullName>
    <description>Last available odometer reading, in miles</description>
    <inlineHelpText>Last available odometer reading, in miles</inlineHelpText>
    <label>Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>