force-app/main/default/objects/malive__IoTDevice__c/fields/malive__User__c.field-meta.xml
<CustomField>
    <fullName>malive__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MA_Live_IoT_Devices</relationshipName>
    <type>Lookup</type>
</CustomField>