force-app/main/default/objects/malive__IoTDevice__c/fields/malive__Vendor__c.field-meta.xml
<CustomField>
    <fullName>malive__Vendor__c</fullName>
    <label>Device Vendor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CalAmp</fullName>
            </value>
            <value>
                <fullName>Geometris</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>MapAnything (Live App)</fullName>
            </value>
            <value>
                <fullName>Xirgo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>