force-app/main/default/objects/malive__IoTDevice__c/fields/malive__VIN__c.field-meta.xml
<CustomField>
    <fullName>malive__VIN__c</fullName>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>