force-app/main/default/objects/malive__IoTDevice__c/listViews/malive__All_Devices.listView-meta.xml
<ListView>
    <fullName>malive__All_Devices</fullName>
    <columns>NAME</columns>
    <columns>malive__DeviceId__c</columns>
    <columns>malive__DeviceType__c</columns>
    <columns>malive__Vendor__c</columns>
    <columns>malive__LatestDailySummary__c</columns>
    <columns>malive__LastPositionDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Devices</label>
</ListView>